# yacppl

./: .appveyor.yml  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: macos.yml  ubuntu.yml  windows.yml
example/: CMakeLists.txt  attributes.cpp  attributes_example.cpp  byte_example.cpp  concepts_example.cpp  cpp_attributes.cpp  nstd.cpp  nstd_example.cpp  state_saver_exit_example.cpp  state_saver_fail_example.cpp  state_saver_success_example.cpp  type_traits_example.cpp  unused.cpp  unused_example.cpp  utility_example.cpp
include/: attributes.hpp  byte.hpp  concepts.hpp  cpp_attributes.hpp  nstd.hpp  state_saver.hpp  type_traits.hpp  unused.hpp  utility.hpp
test/: CMakeLists.txt  attributes_test.cpp  byte_test.cpp  concepts_test.cpp  state_saver_exit_test.hpp  state_saver_fail_test.hpp  state_saver_force_assignable_test.cpp  state_saver_no_throw_restore_test.cpp  state_saver_success_test.hpp  state_saver_suppress_throw_restore_test.cpp  state_saver_test.cpp  state_saver_test_case.hpp  type_traits_test.cpp  unused_test.cpp  utility_test.cpp
