include(CheckCXXCompilerFlag)

set(SOURCES state_saver_test.cpp)

if(CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
    set(OPTIONS /W4 /WX)
    check_cxx_compiler_flag(/permissive HAS_PERMISSIVE_FLAG)
    if(HAS_PERMISSIVE_FLAG)
        set(OPTIONS ${OPTIONS} /permissive-)
    endif()
    set(OPTIONS ${OPTIONS} /wd4702) # Disable warning C4702: unreachable code

    set(HAS_CPP11_FLAG TRUE)
    check_cxx_compiler_flag(/std:c++14 HAS_CPP14_FLAG)
    check_cxx_compiler_flag(/std:c++17 HAS_CPP17_FLAG)
    check_cxx_compiler_flag(/std:c++20 HAS_CPP20_FLAG)
    check_cxx_compiler_flag(/std:c++latest HAS_CPPLATEST_FLAG)
elseif(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
    set(CMAKE_VERBOSE_MAKEFILE ON)
    set(OPTIONS -Wall -Wextra -pedantic-errors -Werror)

    check_cxx_compiler_flag(-std=c++14 HAS_CPP14_FLAG)
    check_cxx_compiler_flag(-std=c++17 HAS_CPP17_FLAG)
    check_cxx_compiler_flag(-std=c++20 HAS_CPP20_FLAG)
endif()

function(configure_test target std)
    target_compile_options(${target} PRIVATE ${OPTIONS})
    target_compile_definitions(${target} PRIVATE DOCTEST_CONFIG_USE_STD_HEADERS)
    target_include_directories(${target} PRIVATE 3rdparty/doctest)
    target_link_libraries(${target} PRIVATE ${CMAKE_PROJECT_NAME})
    set_target_properties(${target} PROPERTIES CXX_EXTENSIONS OFF)
    if(std)
        if(CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
            target_compile_options(${target} PRIVATE /std:${std})
        else()
            target_compile_options(${target} PRIVATE -std=${std})
        endif()
    endif()
    add_test(NAME ${target} COMMAND ${target})
endfunction()

function(make_test target std)
    add_executable(${target} ${SOURCES})
    configure_test(${target} "${std}")
endfunction()

function(make_mode_test target source std)
    add_executable(${target} ${source})
    configure_test(${target} "${std}")
endfunction()

if(CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
    set(CPP11_FLAG "")
else()
    set(CPP11_FLAG c++11)
endif()

make_test(${CMAKE_PROJECT_NAME}-cpp11.t "${CPP11_FLAG}")
make_mode_test(${CMAKE_PROJECT_NAME}-suppress-throw-restore.t state_saver_suppress_throw_restore_test.cpp "${CPP11_FLAG}")
make_mode_test(${CMAKE_PROJECT_NAME}-no-throw-restore.t state_saver_no_throw_restore_test.cpp "${CPP11_FLAG}")
make_mode_test(${CMAKE_PROJECT_NAME}-force-copy-assignable.t state_saver_force_assignable_test.cpp "${CPP11_FLAG}")
target_compile_definitions(${CMAKE_PROJECT_NAME}-force-copy-assignable.t PRIVATE STATE_SAVER_FORCE_COPY_ASSIGNABLE)
make_mode_test(${CMAKE_PROJECT_NAME}-force-move-assignable.t state_saver_force_assignable_test.cpp "${CPP11_FLAG}")
target_compile_definitions(${CMAKE_PROJECT_NAME}-force-move-assignable.t PRIVATE STATE_SAVER_FORCE_MOVE_ASSIGNABLE)

if(HAS_CPP14_FLAG)
    make_test(${CMAKE_PROJECT_NAME}-cpp14.t c++14)
endif()

if(HAS_CPP17_FLAG)
    make_test(${CMAKE_PROJECT_NAME}-cpp17.t c++17)
endif()

if(HAS_CPP20_FLAG)
    make_test(${CMAKE_PROJECT_NAME}-cpp20.t c++20)
endif()

if(HAS_CPPLATEST_FLAG)
    make_test(${CMAKE_PROJECT_NAME}-cpplatest.t c++latest)
endif()
